getAll drugs + DrugList update
